[package]
name    = "explore-uuidv7"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"
unused      = "allow"

[dependencies.uuid]
version  = "1.8.0"
features = [
    "v7", 
    "fast-rng",
]

[dependencies]
data-encoding = "2.5"   # base64, base64url
bs58          = "0.5.1" # base58
num-format    = "0.4.4" # thousands separators
